# embedding_visualization

./: 3_embedding_visualization_effect_of_length.ipynb  3_embedding_visualization_effect_of_length.py  4_matryoshka_embeddings.ipynb  4_matryoshka_embeddings.py  README.md  embedding_visualization_v1.ipynb  embedding_visualization_v2.ipynb  embedding_visualization_v2.py  pyproject.toml
