[project]
name = "embedding-visualization"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "kaleido>=1.0.0",
    "notebook>=7.4.5",
    "openai>=1.102.0",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.1",
]
